--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -520,9 +520,70 @@
    "execution_count": null,
    "id": "ff828581-99ed-444e-80eb-05f2842d1e12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-complex-number"
+    "#si-complex-number\n",
+    "from math import sqrt\n",
+    "\n",
+    "class ComplexNumber(object):\n",
+    "    \"\"\"A class defining a complex number made up of \n",
+    "    real and imaginary parts. Standard complex number\n",
+    "    arithmetic can be performed with objects of this \n",
+    "    class.\n",
+    "\n",
+    "    Attributes:\n",
+    "    real (int): the magnitude and sign of the real part\n",
+    "        of the complex number\n",
+    "    imag (int): the magnitude and sign of the imaginary\n",
+    "        part of the complex number\n",
+    "    \"\"\"\n",
+    "    def __init__(self, real, imag):\n",
+    "        self.real = real\n",
+    "        self.imag = imag\n",
+    "\n",
+    "    def conjugate(self):\n",
+    "        return ComplexNumber(self.real, -(self.imag))\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        return ComplexNumber(self.real + other.real, self.imag + other.imag)\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        return ComplexNumber(self.real - other.real, self.imag - other.imag)\n",
+    "\n",
+    "    def __mul__(self, other):\n",
+    "        return ComplexNumber((self.real * other.real) - (self.imag * other.imag), (self.real * other.imag) + (self.imag * other.real))\n",
+    "    \n",
+    "    def __truediv__(self, other):\n",
+    "        temp1 = self * other.conjugate()\n",
+    "        temp2 = other * other.conjugate()\n",
+    "        return ComplexNumber(temp1.real / temp2.real, temp1.imag / temp2.real)\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        if (self.real==other.real) and (self.imag==other.imag):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    def __ne__(self, other):\n",
+    "        return not (self == other)\n",
+    "\n",
+    "    def __abs__(self):\n",
+    "        return sqrt(self.real ** 2 + self.imag ** 2)\n",
+    "\n",
+    "    def __lt__(self, other):\n",
+    "        return abs(self) < abs(other)\n",
+    "\n",
+    "    def __gt__(self, other):\n",
+    "        return abs(self) > abs(other)"
    ]
   },
   {
@@ -569,7 +630,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#si-academic-record"
+    "#si-academic-record\n",
+    "class StudentRecord(object):\n",
+    "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address, transcript):\n",
+    "        self.firstName = firstName\n",
+    "        self.lastName = lastName\n",
+    "        self.dob = dob\n",
+    "        self.hsName = hsName\n",
+    "        self.hsCity = hsCity\n",
+    "        self.hsState = hsState\n",
+    "        self.degree = degree\n",
+    "        self.address = address\n",
+    "        self.transcript = transcript\n",
+    "\n",
+    "    def cumGPA(self):\n",
+    "        grade_pts = 0\n",
+    "        total_credits = 0\n",
+    "        for course in self.transcript:\n",
+    "            if course['grade'] == 'A':\n",
+    "                grade_pts = course['credits'] * 4\n",
+    "            elif course['grade'] == 'B':\n",
+    "                grade_pts = course['credits'] * 3\n",
+    "            elif course['grade'] == 'C':\n",
+    "                grade_pts = course['credits'] * 2\n",
+    "            elif course['grade'] == 'D':\n",
+    "                grade_pts = course['credits'] * 1\n",
+    "            total_credits += course['credits']\n",
+    "\n",
+    "        return grade_pts / total_credits\n",
+    "\n",
+    "    def semGPA(self):\n",
+    "        grade_pts = 0\n",
+    "        sem_credits = 0\n",
+    "        for course in self.transcript:"
    ]
   }
  ],
@@ -580,16 +673,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "name": "python"
   }
  },
  "nbformat": 4,
