--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -532,7 +532,7 @@
    ],
    "source": [
     "#si-complex-number\n",
-    "from math import sqrt\n",
+    "import math\n",
     "\n",
     "class ComplexNumber(object):\n",
     "    \"\"\"A class defining a complex number made up of \n",
@@ -577,7 +577,7 @@
     "        return not (self == other)\n",
     "\n",
     "    def __abs__(self):\n",
-    "        return sqrt(self.real ** 2 + self.imag ** 2)\n",
+    "        return math.sqrt(self.real ** 2 + self.imag ** 2)\n",
     "\n",
     "    def __lt__(self, other):\n",
     "        return abs(self) < abs(other)\n",
