completion of StudentRecord

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -631,8 +631,11 @@
    "outputs": [],
    "source": [
     "#si-academic-record\n",
+    "from pandas import DataFrame\n",
+    "\n",
     "class StudentRecord(object):\n",
-    "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address, transcript):\n",
+    "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address\n",
+    "        , transcript=DataFrame(columns=['Course', 'Year', 'Semester', 'Credits', 'Grade'])):\n",
     "        self.firstName = firstName\n",
     "        self.lastName = lastName\n",
     "        self.dob = dob\n",
@@ -643,26 +646,30 @@
     "        self.address = address\n",
     "        self.transcript = transcript\n",
     "\n",
+    "    def newCourse(sel, course, year, semester, grade, credits):\n",
+    "        self.transcript.loc[len(self.transcript)] = [course, year, semester, grade, credits]\n",
+    "\n",
     "    def cumGPA(self):\n",
-    "        grade_pts = 0\n",
-    "        total_credits = 0\n",
-    "        for course in self.transcript:\n",
-    "            if course['grade'] == 'A':\n",
-    "                grade_pts = course['credits'] * 4\n",
-    "            elif course['grade'] == 'B':\n",
-    "                grade_pts = course['credits'] * 3\n",
-    "            elif course['grade'] == 'C':\n",
-    "                grade_pts = course['credits'] * 2\n",
-    "            elif course['grade'] == 'D':\n",
-    "                grade_pts = course['credits'] * 1\n",
-    "            total_credits += course['credits']\n",
+    "        return (self.transcript['Grade'] * self.transcript['Credits']).sum()\n",
     "\n",
-    "        return grade_pts / total_credits\n",
+    "    def semGPA(self, year, semester):\n",
+    "        result = self.transcript[(self.transcript['Year'] == year) & (self.transcript['Semester'] == semester)]\n",
+    "        return (result['Grade'] * result['Credits']).sum()\n",
     "\n",
-    "    def semGPA(self):\n",
-    "        grade_pts = 0\n",
-    "        sem_credits = 0\n",
-    "        for course in self.transcript:"
+    "    def credits(self):\n",
+    "        return self.transcript['Credits'].sum()\n",
+    "\n",
+    "    def scholarship(self):\n",
+    "        cumGPA = self.cumGPA()\n",
+    "        if cumGPA >= 3.9:\n",
+    "            return \"Full-ride\"\n",
+    "        elif cumGPA >= 3.63:\n",
+    "            return \"Half-tuition\"\n",
+    "        elif cumGPA >= 3.3:\n",
+    "            return \"Quarter-tuition\"\n",
+    "        else:\n",
+    "            return \"Not Eligible\"\n",
+    "        "
    ]
   }
  ],
