import of pandas

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -631,11 +631,11 @@
    "outputs": [],
    "source": [
     "#si-academic-record\n",
-    "from pandas import DataFrame\n",
+    "import pandas as pd\n",
     "\n",
     "class StudentRecord(object):\n",
     "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address\n",
-    "        , transcript=DataFrame(columns=['Course', 'Year', 'Semester', 'Credits', 'Grade'])):\n",
+    "        , transcript=pd.DataFrame(columns=['Course', 'Year', 'Semester', 'Credits', 'Grade'])):\n",
     "        self.firstName = firstName\n",
     "        self.lastName = lastName\n",
     "        self.dob = dob\n",
