re-factoring of transcript from DataFrame to 2d list

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
     "\n",
     "class StudentRecord(object):\n",
     "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address\n",
-    "        , transcript=pd.DataFrame(columns=['Course', 'Year', 'Semester', 'Credits', 'Grade'])):\n",
+    "        , transcript=[]):\n",
     "        self.firstName = firstName\n",
     "        self.lastName = lastName\n",
     "        self.dob = dob\n",
@@ -646,18 +646,34 @@
     "        self.address = address\n",
     "        self.transcript = transcript\n",
     "\n",
-    "    def newCourse(sel, course, year, semester, grade, credits):\n",
-    "        self.transcript.loc[len(self.transcript)] = [course, year, semester, grade, credits]\n",
+    "    def newCourse(self, course, year, semester, credits, grade):\n",
+    "        self.transcript.append([course, year, semester, credits, grade])\n",
     "\n",
     "    def cumGPA(self):\n",
-    "        return (self.transcript['Grade'] * self.transcript['Credits']).sum()\n",
+    "        grade_pts = 0\n",
+    "        total_credits = 0\n",
+    "        for course in self.transcript:\n",
+    "            grade_pts += course[4] * course[3]\n",
+    "            total_credits += course[3]\n",
+    "\n",
+    "        return grade_pts / total_credits\n",
     "\n",
     "    def semGPA(self, year, semester):\n",
-    "        result = self.transcript[(self.transcript['Year'] == year) & (self.transcript['Semester'] == semester)]\n",
-    "        return (result['Grade'] * result['Credits']).sum()\n",
+    "        grade_pts = 0\n",
+    "        total_credits = 0\n",
+    "        for course in self.transcript:\n",
+    "            if course[1] == year and course[2] == semester:\n",
+    "                grade_pts += course[4] * course[3]\n",
+    "                total_credits += course[3]\n",
+    "\n",
+    "        return grade_pts / total_credits\n",
     "\n",
     "    def credits(self):\n",
-    "        return self.transcript['Credits'].sum()\n",
+    "        total_credits = 0\n",
+    "        for course in self.transcript:\n",
+    "            total_credits += course[3]\n",
+    "\n",
+    "        return total_credits\n",
     "\n",
     "    def scholarship(self):\n",
     "        cumGPA = self.cumGPA()\n",
